<resources>
    <string name="app_name">Fast Loan</string>
    <string name="app_can_loan_highest_money">Dòng cho vay lên đến 1.000.000 đồng</string>
    <string name="app_loan_tip">10 phút đến tài khoản hàng tháng lãi suất thấp 0.5%\nBạn có thể vay không cần thế chấp và CMND</string>
    <string name="app_login">đăng nhập</string>
    <string name="app_register">đăng ký</string>
    <string name="app_please_input_phone">Xin vui lòng điền số điện thoại của bạn</string>
    <string name="app_input_phone_wrong">Định dạng số điện thoại không đúng</string>
    <string name="app_please_input_password">Xin hãy điền mật khẩu</string>
    <string name="app_please_input_verify_code">Xin vui lòng nhập mã xác minh của bạn</string>
    <string name="app_get_ver_code">lấy mã xác minh</string>
    <string name="app_get_ver_code_success">Nhận mã xác minh thành công</string>
    <string name="app_send_again">Gửi lại</string>
    <string name="app_register_login">Đăng ký và đăng nhập</string>
    <string name="app_my_loan">Khoản vay của tôi</string>
    <string name="app_wallet">ví tiền</string>
    <string name="app_service">dịch vụ khách hàng</string>
    <string name="app_mine"> của tôi</string>
    <string name="app_jd_e_loan">Fast Loan</string>
    <string name="app_easy_loan">Cho vay dễ danh</string>
    <string name="app_quick_loan">khoản vay nhanh</string>
    <string name="app_highest_money">Có thể cho vay lên đến 1 triệu vnd</string>
    <string name="app_ten_minute_loan">Cho vay 10 phút</string>
    <string name="app_estimate_loan_value">Khoản vay ước tính(đồng)</string>
    <string name="app_month_rate">Lãi suất hàng tháng</string>
    <string name="app_loan_time_month">Thời gian vay (tháng)</string>
    <string name="app_loan_time">Thời gian cho vay</string>
    <string name="app_apply_now">nộp đơn ngay lập tức</string>
    <string name="app_money_0">10,000-50,000</string>
    <string name="app_money_1">50,000-100,000</string>
    <string name="app_money_2">100,000-200,000</string>
    <string name="app_money_3">200,000-500,000</string>
    <string name="app_money_4">500,000-1,000,000</string>
    <string name="app_money_5">Trên 1,000,000</string>
    <string name="app_money_0_title">10k-50k</string>
    <string name="app_money_1_title">50k-100k</string>
    <string name="app_money_2_title">100k-200k</string>
    <string name="app_money_3_title">200k-500k</string>
    <string name="app_money_4_title">500k-1,000k</string>
    <string name="app_money_5_title">Trên 1,000k</string>
    <string name="app_loan_time_0">12 tháng</string>
    <string name="app_loan_time_1">18 tháng</string>
    <string name="app_loan_time_2">24 tháng</string>
    <string name="app_loan_time_3">36 tháng</string>
    <string name="app_sum_month">tháng</string>
    <string name="app_sorry">Lấy làm tiếc</string>
    <string name="app_please_verify_real_name_first">Đăng ký khoản vay sau khi xác thực tên thật</string>
    <string name="app_click_to_real_name">Nhấp để làm mới giao diện xác thực tên thật</string>
    <string name="app_click_look_contract">Bấm để kiểm tra hợp đồng vay</string>
    <string name="app_loan_agreement">Bản thân tôi cũng đã đọc kỹ hợp đồng vay và kiểm tra thông tin khoản vay kỹ càng. Sau khi nhấn nút OK để đăng ký vay, hợp đồng vay sẽ có hiệu lực. Nếu vi phạm hợp đồng vì lý do cá nhân, tôi sẵn sàng chịu mọi hậu quả pháp lý.</string>
    <string name="app_sure_apply_loan">Xác định đăng ký khoản vay</string>
    <string name="app_contralation">Xin chúc mừng</string>
    <string name="app_loan_success_tip">Đơn yêu cầu khoản vay của bạn thành công\nSau khi xem xét khoản vay thành công, nền tảng sẽ thông báo cho bạn qua SMS hoặc điện thoại</string>
    <string name="app_the_window_will_close_xxx_second">Cửa sổ này sẽ tự động đóng sau %1$s giây</string>
    <string name="app_sure_loan_info">Xác nhận thông tin khoản vay</string>
    <string name="app_loan_user_info">Tên Thấu kính：%1$s\n\nSố thẻ căn cước của Kính thư：%2$s\n\nSố điện thoại di động của máy kéo：%3$s\n\nGiá khoản vay：%4$s\n\nThời gian vay：%5$s\n\nTỷ lệ lãi suất tháng：%6$s\n</string>
    <string name="app_account_balance">số dư tài khoản（đồng）</string>
    <string name="app_withdraw_now">Rút tiền ngay bây giờ</string>
    <string name="app_my_bank_card">Thẻ ngân hàng của tôi</string>
    <string name="app_no_bind_bank_card">Không ràng buộc thẻ ngân hàng</string>
    <string name="app_bank_protect_account_money">Sự an toàn của quỹ tài khoản được đảm bảo bởi ngân hàng</string>
    <string name="app_withdraw_status_title">Tình trạng rút tiền</string>
    <string name="app_withdraw_time">thời gian rút tiền:</string>
    <string name="app_withdraw_money">Số tiền rút:</string>
    <string name="app_xxx_money">%1$s（đồng）</string>
    <string name="app_withdraw_status">Tình trạng rút tiền:</string>
    <string name="app_withdraw_status_0">kiểm tra rút tiền</string>
    <string name="app_withdraw_status_0_reason">Việc rút tiền đang được kiểm tra, hãy kiên nhẫn</string>
    <string name="app_withdraw_status_1">Có thể rút tiền</string>
    <string name="app_withdraw_status_2">Rút tiền thất bại</string>
    <string name="app_withdraw_status_3">Rút tiền thành công</string>
    <string name="app_withdraw_reason">nguyên nhân:</string>
    <string name="app_apply_withdraw">nộp đơn rút tiền</string>
    <string name="app_withdraw_money_xxx">số tiền rút:%1$s（đồng）</string>
    <string name="app_please_input_withdraw_password">Vui lòng nhập mật khẩu rút tiền gồm 6 chữ số</string>
    <string name="app_withdraw_pas_tip">Nếu bạn quên mật khẩu rút tiền hoặc không có mật khẩu rút tiền\nVui lòng liên hệ với dịch vụ khách hàng trực tuyến</string>
    <string name="app_withdraw_success_tip">Đơn yêu cầu khoản vay thành công\nSau khi kiểm tra khoản vay thành công, nền tảng sẽ thông báo cho bạn qua SMS hoặc điện thoại</string>
    <string name="app_withdraw_failed_tip">Bạn không có số tiền để rút vào lúc này và không thể rút</string>
    <string name="app_your_line_service_manager">Người quản lý dịch vụ khách hàng zalo chuyên dụng của bạn</string>
    <string name="app_click_contact">Bấm để liên hệ</string>
    <string name="app_service_time">Giờ làm việc của dịch vụ chăm sóc khách hàng là: 09:00 đến 09:00 mỗi ngày</string>
    <string name="app_wallet_balance">Số dư trên ví</string>
    <string name="app_real_name_verify">Xác minh tên thật</string>
    <string name="app_not_verify">không xác nhận</string>
    <string name="app_verified">xác minh</string>
    <string name="app_my_loan_2">khoản vay của tôi</string>
    <string name="app_my_back_money">khoản trả nợ của tôi</string>
    <string name="app_online_service">dịch vụ trực tuyến</string>
    <string name="app_common_question">vấn đề thường gặp</string>
    <string name="app_setting">thiết lập</string>
    <string name="app_modify_login_psw">Sửa đổi mật khẩu đăng nhập</string>
    <string name="app_about_us">về chúng tôi</string>
    <string name="app_version">phiên bản</string>
    <string name="app_logout">đăng xuất</string>
    <string name="app_sure_logout">Bạn có chắc chắn đăng xuất không</string>
    <string name="app_old_psw">mật khẩu củ</string>
    <string name="app_please_input_old_psw">Vui lòng nhập mật khẩu cũ</string>
    <string name="app_new_psw">mật khẩu mới</string>
    <string name="app_please_input_new_psw">Vui lòng nhập mật khẩu mới</string>
    <string name="app_sure_new_psw">Xác nhận mật khẩu mới</string>
    <string name="app_please_input_new_psw_again">Vui lòng nhập lại mật khẩu mới</string>
    <string name="app_identity_security_auth">Xác minh danh tính</string>
    <string name="app_real_name_tip">Để đảm bảo an toàn cho tiền của bạn, vui lòng điền trung thực các thông tin sau</string>
    <string name="app_identity_info">Thông tin nhận dạng</string>
    <string name="app_completed">đã hoàn thành</string>
    <string name="app_data_info">thông tin dữ liệu</string>
    <string name="app_bank_card">Nhận thẻ ngân hàng</string>
    <string name="app_phone_auth">Xác thực điện thoại di động</string>
    <string name="app_hand_mark">chữ ký viết tay</string>
    <string name="app_go_blank">Điền vào</string>
    <string name="app_real_name">Họ tên thật</string>
    <string name="app_please_input_real_name">Vui lòng nhập tên thật của bạn</string>
    <string name="app_cer_no">số chứng minh</string>
    <string name="app_please_input_cer_no">chữ Số 9 hoặc 12 chữ số</string>
    <string name="app_upload_cer_phone">Tải lên ảnh ID</string>
    <string name="app_upload_front_cer_phone">Tải lên ảnh mặt trước của giấy tờ tùy thân</string>
    <string name="app_upload_back_cer_phone">Tải lên ảnh mặt sau của giấy tờ tùy thân của bạn</string>
    <string name="app_submit">xác nhận nộp</string>
    <string name="app_had_submit">đã nộp</string>
    <string name="app_take_photo">Chụp ảnh</string>
    <string name="app_album">Chọn từ album điện thoại</string>
    <string name="app_education">học lực</string>
    <string name="app_please_select_highest_education">Vui lòng chọn bằng cấp cao nhất của tôi</string>
    <string name="app_income_year">Thu nhập cá nhân hàng năm</string>
    <string name="app_please_select_income_year">Vui lòng chọn thu nhập cá nhân hàng năm</string>
    <string name="app_loan_use">Mục đích vay vốn</string>
    <string name="app_please_input_loan_use">Vui lòng nhập mục đích vay</string>
    <string name="app_had_house">bất động sản</string>
    <string name="app_had_car">Xe hơi</string>
    <string name="app_had">có</string>
    <string name="app_no">không</string>
    <string name="app_ok">xác nhận</string>
    <string name="app_cancel">hủy bỏ</string>
    <string name="app_education_0">Trung học cơ sở trở xuống</string>
    <string name="app_education_1">Trung học phổ thông</string>
    <string name="app_education_2">trường đại học</string>
    <string name="app_education_3">Trên đại học</string>
    <string name="app_income_0">trên 100,000</string>
    <string name="app_income_1">100,001-300,000</string>
    <string name="app_income_2">300,001-500,000</string>
    <string name="app_income_3">500,001-1,000,000</string>
    <string name="app_income_4">1,000,001-5,000,000</string>
    <string name="app_income_5">5,000,001 Trên</string>
    <string name="app_failed">thất bại</string>
    <string name="app_failed_reason">Thông tin bạn đã nhập không hợp lệ hoặc không đầy đủ.\nVui lòng kiểm tra thông tin mới</string>
    <string name="app_sure_back">Thông tin bạn điền hiện vẫn chưa được gửi\nBạn có chắc chắn muốn quay lại giao diện chính</string>
    <string name="app_card_owner_name">tên chủ thẻ</string>
    <string name="app_please_input_card_owner_name">Vui lòng nhập tên chủ thẻ</string>
    <string name="app_open_card_bank">tài khoản ngân hàng</string>
    <string name="app_please_select_bank">Vui lòng chọn ngân hàng</string>
    <string name="app_bank_card_no">thẻ ngân hàng</string>
    <string name="app_please_input_card_no">Các chữ  số  từ 9 đến 19 chữ số</string>
    <string name="app_select_education">Chọn một mức độ</string>
    <string name="app_select_income">Chọn thu nhập</string>
    <string name="app_select_bank">Chọn ngân hàng</string>
    <string name="app_phone_number">số điện thoại</string>
    <string name="app_write_again">Viết lại</string>
    <string name="app_you_sign">Chữ ký của bạn</string>
    <string name="app_hand_write_tip">Vui lòng ký tên trong dòng chấm. Chữ ký phải chuẩn, đầy đủ và rõ ràng</string>
    <string name="app_loan_no_xxx">biển số tiền vay:%1$s</string>
    <string name="app_loan_money">số tiền vay</string>
    <string name="app_apply_time">thời gian nộp đơn</string>
    <string name="app_look_contract">Xem hợp đồng</string>
    <string name="app_contract">hợp đồng</string>
    <string name="app_loan_detail">chi tiết khoản vay</string>
    <string name="app_loan_status_0">đang kiểm tra</string>
</resources>