<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ff_ff_ff"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_top_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_10"
        android:background="@color/color_f2_f3_f8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_16"
        android:paddingRight="@dimen/dimen_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_old_psw"
            android:textColor="@color/color_0d_0d_0d"
            android:textSize="@dimen/dimen_16" />

        <EditText
            android:id="@+id/etOldPsw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical|right"
            android:hint="@string/app_please_input_old_psw"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/color_0d_0d_0d"
            android:textColorHint="@color/color_db_db_db"
            android:textSize="@dimen/dimen_16" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_10"
        android:background="@color/color_f2_f3_f8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_16"
        android:paddingRight="@dimen/dimen_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_new_psw"
            android:textColor="@color/color_0d_0d_0d"
            android:textSize="@dimen/dimen_16" />

        <EditText
            android:id="@+id/etNewPsw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical|right"
            android:hint="@string/app_please_input_new_psw"
            android:inputType="textPassword"
            android:maxLength="13"
            android:singleLine="true"
            android:textColor="@color/color_0d_0d_0d"
            android:textColorHint="@color/color_db_db_db"
            android:textSize="@dimen/dimen_16" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:layout_marginLeft="@dimen/dimen_16"
        android:layout_marginRight="@dimen/dimen_16"
        android:background="@color/color_f2_f3_f8" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_16"
        android:paddingRight="@dimen/dimen_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_sure_new_psw"
            android:textColor="@color/color_0d_0d_0d"
            android:textSize="@dimen/dimen_16" />

        <EditText
            android:id="@+id/etNewPswAgain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical|right"
            android:hint="@string/app_please_input_new_psw_again"
            android:inputType="textPassword"
            android:maxLength="16"
            android:singleLine="true"
            android:textColor="@color/color_0d_0d_0d"
            android:textColorHint="@color/color_db_db_db"
            android:textSize="@dimen/dimen_16" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_f2_f3_f8"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_150" />

        <TextView
            android:id="@+id/tvSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_49"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:background="@drawable/app_shape_4968ea_25"
            android:gravity="center"
            android:text="@string/app_submit"
            android:textColor="@color/color_ff_ff_ff"
            android:textSize="@dimen/dimen_18" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>